--- a/node/package.json
+++ b/node/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "copy-paste": "^1.1.4"
+  }
 }
